--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,11 +14,12 @@ body{
 
 .parte1{
   background:url(/images/bg-main-desktop.png) no-repeat;
+  background-size: cover;
 }
 
 .cartao-frente{
   position: absolute;
-  left: 200px;
+  left: 350px;
   top: 180px;
   color:white;
 }
@@ -45,7 +46,7 @@ body{
 
 .cartao-atras{
   position: absolute;
-  left: 280px;
+  left: 400px;
   top: 450px;
 }
 
@@ -107,4 +108,377 @@ input::placeholder{
   font-family: 'Space Grotesk', sans-serif;
   margin-top:18px;
   font-size:1.1rem;
+  cursor:pointer
+}
+
+@media (max-width: 1600px){
+  body{
+    background: lightcyan;
+  }
+
+  .cartao-frente{
+    left: 210px;
+  }
+
+  .cartao-atras{
+    left: 290px;
+  }
+}
+
+@media (max-width: 1450px){
+  body{
+    background: lightcoral;
+  }
+
+  .cartao-frente{
+    left: 150px;
+  }
+
+  .cartao-atras{
+    left: 210px;
+  }
+}
+
+@media (max-width: 1300px){
+  body{
+    background: lightblue;
+  }
+
+  .cartao-frente{
+    left: 70px;
+  }
+
+  .cartao-atras{
+    left: 100px;
+  }
+}
+
+@media (max-width: 1300px){
+  body{
+    background: lightpink;
+  }
+
+  .cartao-frente{
+    left: 40px;
+  }
+
+  .cartao-atras{
+    left: 70px;
+  }
+
+  .frente, .atras{
+    width:90%;
+  }
+
+  .nome-cartao{
+    padding-left:25px;
+    top:160px;
+  }
+  
+  .data-cartao{
+    padding-right:65px;
+    top:160px;
+    right:0;
+  }
+
+  .cvc-cartao{
+    top:80px;
+    padding-right:90px;
+  }
+}
+
+@media (max-width: 1100px){
+  body{
+    background-color: lightyellow;
+  }
+
+  .frente, .atras{
+    width:80%;
+  }
+  .cartao-atras{
+    top: 400px;
+  }
+
+  .nome-cartao{
+    padding-left:15px;
+    top:140px;
+  }
+
+  .numero-cartao{
+    padding-left: 15px;
+  }
+
+  .data-cartao{
+    padding-right:105px;
+    top:140px;
+    right:0;
+  }
+
+  .cvc-cartao{
+    top:65px;
+    padding-right:130px;
+  }
+}
+
+@media (max-width: 980px){
+  body{
+    background-color: lightsalmon;
+    font-size: 1rem;
+  }
+
+  .frente, .atras{
+    width:70%;
+  }
+  .cartao-atras{
+    top: 380px;
+  }
+
+  .nome-cartao{
+    padding-left:15px;
+    top:120px;
+  }
+  .numero-cartao {
+    font-size: 1.5rem;
+    padding-left: 15px;
+  }
+
+  .data-cartao{
+    padding-right:145px;
+    top:120px;
+    right:0;
+  }
+
+  .cvc-cartao{
+    top:60px;
+    padding-right:170px;
+  }
+}
+
+@media (max-width: 900px){
+  body{
+    background-color: lightsteelblue;
+  }
+
+  .info-cartao{
+      width:300px;
+  }
+ 
+}
+
+@media (max-width: 920px){
+  body{
+    background-color: lightseagreen;
+    font-size: 0.9rem;
+  }
+
+  .numero-cartao {
+    font-size: 1.3rem;
+    padding-left: 15px;
+  }
+
+  .info-cartao{
+      width:300px;
+  }
+
+  .frente, .atras{
+    width:60%;
+  }
+
+  .nome-cartao{
+    top:100px;
+  }
+
+  .data-cartao{
+    padding-right:195px;
+    top:100px;
+  }
+
+  .cvc-cartao{
+    top:50px;
+    padding-right:210px;
+  }
+
+  .cartao-atras{
+    top: 360px;
+  }
+ 
+}
+
+@media (max-width: 850px){
+  .conteudo{
+    grid-template-columns: 1fr;
+    font-size:1rem;
+  }
+
+  .frente, .atras{
+    width:85%;
+  }
+ 
+  .cartao-atras {
+    top: 20px;
+  left:200px;
+
+}
+.cartao-frente {
+  top: 180px;
+  z-index:1;
+  left:120px;
+}
+.cvc-cartao {
+  top: 75px;
+  padding-right: 110px;
+}
+
+.numero-cartao {
+    font-size: 1.8rem;
+}
+
+.nome-cartao, .data-cartao {
+  top: 160px;
+}
+
+.data-cartao {
+  padding-right: 85px;
+}
+
+.info-cartao{
+  width:500px;
+
+  margin-top:100px;
+}
+
+}
+
+@media (max-width: 700px){
+  body{
+    background: lightslategray;
+  }
+  .cartao-atras {
+
+  left:180px;
+
+}
+.cartao-frente {
+  left:100px;
+}
+
+}
+
+@media (max-width: 600px){
+  body{
+    background: lightyellow;
+  }
+  .cartao-atras {
+  left:110px;
+}
+.cartao-frente {
+  left:80px;
+}
+
+}
+
+@media (max-width: 520px){
+  body{
+    background: lightcoral;
+  }
+  .cartao-atras {
+  left:90px;
+}
+.cartao-frente {
+  left:40px;
+}
+
+.info-cartao{
+  width:400px;
+}
+
+.cvc-cartao {
+  top: 70px;
+}
+
+}
+
+@media (max-width: 450px){
+  body{
+    background: pink;
+  }
+  .cartao-atras {
+  left:90px;
+}
+.cartao-frente {
+  top: 120px;
+}
+
+.nome-cartao, .data-cartao {
+  top: 120px;
+}
+
+.info-cartao{
+  width:380px;
+  align-self: flex-start;
+  margin-top: 80px;
+
+}
+
+.cvc-cartao {
+  top: 48px;
+  padding-right: 80px;
+}
+.numero-cartao {
+  font-size: 1.6rem;
+}
+
+}
+
+@media (max-width: 450px){
+  body{
+    background: pink;
+  }
+
+.nome-cartao, .data-cartao {
+  top: 120px;
+}
+
+.info-cartao{
+  width:350px;
+}
+
+.data-cartao {
+  padding-right: 65px;
+}
+
+.cvc-cartao {
+  top: 42px;
+}
+.numero-cartao {
+  font-size: 1.4rem;
+}
+
+}
+
+@media (max-width: 380px){
+  body{
+    background: purple;
+  }
+
+.nome-cartao, .data-cartao {
+  top: 120px;
+}
+.data-cartao {
+  padding-right: 65px;
+}
+
+.cvc-cartao {
+  top: 42px;
+}
+.numero-cartao {
+  font-size: 1.4rem;
+}
+
+.info-cartao{
+  width:320px;
+  align-self: center;
+
+}
+
 }
