--- a/css/estilo.css
+++ b/css/estilo.css
@@ -112,9 +112,6 @@ input::placeholder{
 }
 
 @media (max-width: 1600px){
-  body{
-    background: lightcyan;
-  }
 
   .cartao-frente{
     left: 210px;
@@ -126,9 +123,6 @@ input::placeholder{
 }
 
 @media (max-width: 1450px){
-  body{
-    background: lightcoral;
-  }
 
   .cartao-frente{
     left: 150px;
@@ -140,10 +134,6 @@ input::placeholder{
 }
 
 @media (max-width: 1300px){
-  body{
-    background: lightblue;
-  }
-
   .cartao-frente{
     left: 70px;
   }
@@ -154,9 +144,6 @@ input::placeholder{
 }
 
 @media (max-width: 1300px){
-  body{
-    background: lightpink;
-  }
 
   .cartao-frente{
     left: 40px;
@@ -188,9 +175,6 @@ input::placeholder{
 }
 
 @media (max-width: 1100px){
-  body{
-    background-color: lightyellow;
-  }
 
   .frente, .atras{
     width:80%;
@@ -221,10 +205,6 @@ input::placeholder{
 }
 
 @media (max-width: 980px){
-  body{
-    background-color: lightsalmon;
-    font-size: 1rem;
-  }
 
   .frente, .atras{
     width:70%;
@@ -255,9 +235,6 @@ input::placeholder{
 }
 
 @media (max-width: 900px){
-  body{
-    background-color: lightsteelblue;
-  }
 
   .info-cartao{
       width:300px;
@@ -267,7 +244,6 @@ input::placeholder{
 
 @media (max-width: 920px){
   body{
-    background-color: lightseagreen;
     font-size: 0.9rem;
   }
 
@@ -307,11 +283,11 @@ input::placeholder{
 @media (max-width: 850px){
   .conteudo{
     grid-template-columns: 1fr;
-    font-size:1rem;
+    font-size:1.125rem;
   }
 
   .frente, .atras{
-    width:85%;
+    width:100%;
   }
  
   .cartao-atras {
@@ -325,8 +301,8 @@ input::placeholder{
   left:120px;
 }
 .cvc-cartao {
-  top: 75px;
-  padding-right: 110px;
+  top: 90px;
+  padding-right: 50px;
 }
 
 .numero-cartao {
@@ -334,25 +310,29 @@ input::placeholder{
 }
 
 .nome-cartao, .data-cartao {
-  top: 160px;
+  top: 180px;
 }
 
 .data-cartao {
-  padding-right: 85px;
+  padding-right: 30px;
 }
 
 .info-cartao{
   width:500px;
-
+  align-self: start;
   margin-top:100px;
 }
 
 }
 
-@media (max-width: 700px){
-  body{
-    background: lightslategray;
+@media (max-width: 850px){
+  .info-cartao{
+    align-self: center;
   }
+}
+
+@media (max-width: 700px){
+
   .cartao-atras {
 
   left:180px;
@@ -365,9 +345,7 @@ input::placeholder{
 }
 
 @media (max-width: 600px){
-  body{
-    background: lightyellow;
-  }
+
   .cartao-atras {
   left:110px;
 }
@@ -378,9 +356,7 @@ input::placeholder{
 }
 
 @media (max-width: 520px){
-  body{
-    background: lightcoral;
-  }
+
   .cartao-atras {
   left:90px;
 }
@@ -399,9 +375,7 @@ input::placeholder{
 }
 
 @media (max-width: 450px){
-  body{
-    background: pink;
-  }
+
   .cartao-atras {
   left:90px;
 }
@@ -431,9 +405,6 @@ input::placeholder{
 }
 
 @media (max-width: 450px){
-  body{
-    background: pink;
-  }
 
 .nome-cartao, .data-cartao {
   top: 120px;
@@ -456,20 +427,46 @@ input::placeholder{
 
 }
 
-@media (max-width: 380px){
-  body{
-    background: purple;
+
+@media (max-width: 420px){
+
+.cvc-cartao {
+  top: 48px;
+  padding-right: 70px;
+}
+
+}
+
+@media (max-width: 415px){
+
+  .cvc-cartao {
+    padding-right: 80px;
+  }
+  
   }
 
+@media (max-width: 395px){
+
+  .cvc-cartao {
+    padding-right: 75px;
+    top: 43px;
+  }
+
+}
+
+@media (max-width: 380px){
+
+
 .nome-cartao, .data-cartao {
-  top: 120px;
+  top: 110px;
 }
 .data-cartao {
   padding-right: 65px;
 }
 
 .cvc-cartao {
-  top: 42px;
+  top: 39px;
+  padding-right: 70px;
 }
 .numero-cartao {
   font-size: 1.4rem;
@@ -481,4 +478,15 @@ input::placeholder{
 
 }
 
+}
+
+@media (max-width: 380px){
+ 
+.nome-cartao, .data-cartao {
+  top: 100px;
+}
+.cvc-cartao {
+  top: 35px;
+  padding-right: 65px;
+}
 }
